FIX attempt for jarring scrolling effect on mobile 15

--- a/projects/work 1/Deadspace (2008)/css/deadspace_common.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_common.css
@@ -34,13 +34,13 @@ div.whited {
   background-color: rgb(100, 0, 0);
 }
 main div {
-  height: 50lvh;
+  height: 100vh;
   align-content: center;
   padding: 0 8vw;
-  background-color: blue;
+  background-color: orange;
 }
 div.half {
-  height: 30lvh;
+  height: 30vh;
   position: relative;
 }
 #next {
